# agent-builder-api

./: .dockerignore  .env  .env.docker  .gitignore  README.md  api_client.sh  chat.sh  deploy.sh  dockerfile  generate_reqs.sh  install-extra-deps.sh  log_config.yml  pyproject copy.toml  pyproject.toml  requirements.txt  start-container.sh  start-gradio-ui.sh  start-poetry-server.sh  start-server.sh
.devcontainer/: devcontainer.json
.devcontainer/codespaces/: devcontainer.json
.devcontainer/codespaces-open/: devcontainer.json  docker-compose-codespace-extend.yml
agent-containers/: docker-compose-codespace.open.yml  docker-compose-codespace.yml  docker-compose.yml
agentbuilder/: chat.py  main.py  migrate.py
agentbuilder/agents/: AgentBuilderWithGuardRails.py  AgentBuilderWithNemoGuardRails.py  BaseAgentBuilder.py  BaseGraphAgentBuilder.py  BaseGuardRailsBuilder.py  BaseNemoGuardRailsBuilder.py  agent_helper.py  agent_tracer.py  base_graph_agent_builder.py  base_guard_rails_builder.py  base_mcp_react_agent_builder.py  base_nemo_guard_rails_builder.py  base_react_agent_builder.py  params.py  prompt_helper.py
agentbuilder/data/: __init__.py  agents.json  job_description.txt  resume.txt  steps.json  tools.json
agentbuilder/db/: __init__.py  json_db.py  mongo_db.py
agentbuilder/error/: error_handler.py
agentbuilder/factory/: agent_factory.py  prompt_factory.py  tool_factory.py
agentbuilder/helper/: env_helper.py  json_helper.py
agentbuilder/llm/: __init__.py  anthropic_llm.py  cohere_llm.py  gemini_llm.py  nvidia_llm.py  ollama_llm.py  openai_llm.py  together_llm.py
agentbuilder/logger/: __init__.py  custom_logging.py
agentbuilder/mcp/: __init__.py
agentbuilder/tools/: direct_answer_tool.py  git_diff_tool.py  git_pull_request_tool.py  greeting_tool.py  job_description_tool.py  json_tool_kit.py  repl_tool.py  resume_search_tool.py  save_skill_tool.py  sum_tool.py  vector_store_search_tool.py  weather_tools.py  web_search_tool.py  word_length_tool.py
agentbuilder/types/: __init__.py
agentbuilder/ui/: agent_ui.py  app.py
vibe-compose/: docker-compose.yml
(+46 files in other folders)
