[tool.poetry]
name = "agentbuilder"
version = "0.1.0"
description = "Agent builder API"
authors = ["Nagarajan Ramasamy"]
packages = [{ include = "agentbuilder" }]

[tool.poetry.dependencies]
python = ">=3.10.0,<=3.12.10"
langchain = "*"
langchain-community = "*"
langchain-experimental = "*"
langchainhub = "*"
fastapi = "*"
uvicorn = "0.30.0"
python-dotenv = "1.0.1"
colorama = "0.4.6"
pydantic = "2.10.6"
faiss-cpu = { version = "1.8.0", optional = true }
beautifulsoup4 = { version = "4.12.3", optional = true }
tiktoken = { version = "0.7.0", optional = true }
langgraph = { version = "*", optional = true }
ipython = { version = "8.24.0", optional = true }
pymongo = { version = "4.7.2", optional = true }
motor = { version = "3.4.0", optional = true }
langchain-openai = { version = "*", optional = true }
langchain-cohere = { version = "*", optional = true }
langchain-google-genai = { version = "*", optional = true }
langchain-anthropic = { version = "*", optional = true }
langchain-voyageai = { version = "*", optional = true }
guardrails-ai = { version = "*", optional = true }
nemoguardrails = { version = "*", optional = true }
gradio = { version = "5.11.0", optional = true }
langchain-nvidia-ai-endpoints = { version = "*", optional = true }
langchain-mcp-adapters = { version = "*", optional = true}

[tool.poetry.extras]
vectordb = ["faiss-cpu", "beautifulsoup4", "tiktoken"]
langgraph = ["langgraph", "ipython"]
mongodb = ["pymongo", "motor"]
openai = ["langchain-openai"]
cohere = ["langchain-cohere"]
gemini = ["langchain-google-genai"]
anthropic = ["langchain-anthropic", "langchain-voyageai"]
nvidia = ["langchain-nvidia-ai-endpoints"]
guardrails = ["guardrails-ai", "nemoguardrails"]
ui = ["gradio"]
mcp = ["langchain-mcp-adapters"]

[tool.poetry.scripts]
start-server = "agentbuilder.main:start_api"
start-ui = "agentbuilder.ui.app:demo.launch"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
